--- a/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_d_Ackbar_lLVYkr2eG13xLU7R.yml
+++ b/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_d_Ackbar_lLVYkr2eG13xLU7R.yml
@@ -5,16 +5,16 @@ color: '#a4653d'
 sorting: a
 _id: lLVYkr2eG13xLU7R
 description: ''
-sort: 100000
+sort: 1200000
 flags: {}
 _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.351'
   systemId: penombre
-  systemVersion: '0'
-  createdTime: 1757151273435
-  modifiedTime: 1757151273435
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  systemVersion: '#{VERSION}#'
+  createdTime: 1766221980844
+  modifiedTime: 1766221980857
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _key: '!folders!lLVYkr2eG13xLU7R'
