--- a/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_de_C_liana_NxgKbO9Dq94f1TSA.yml
+++ b/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_de_C_liana_NxgKbO9Dq94f1TSA.yml
@@ -5,16 +5,16 @@ color: '#a4653d'
 sorting: a
 _id: NxgKbO9Dq94f1TSA
 description: ''
-sort: 300000
+sort: 1300000
 flags: {}
 _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.351'
   systemId: penombre
-  systemVersion: '0'
-  createdTime: 1757151276754
-  modifiedTime: 1757151276806
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  systemVersion: '#{VERSION}#'
+  createdTime: 1766222002816
+  modifiedTime: 1766222002828
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _key: '!folders!NxgKbO9Dq94f1TSA'
