--- a/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_de_T_tras_IxCLMJlUPYUhtQ3N.yml
+++ b/src/packs/kit-pouvoirs-potentiels/folders_Pouvoirs_de_T_tras_IxCLMJlUPYUhtQ3N.yml
@@ -5,7 +5,7 @@ color: '#a4653d'
 sorting: a
 _id: IxCLMJlUPYUhtQ3N
 description: ''
-sort: 800000
+sort: 1400000
 flags: {}
 _stats:
   compendiumSource: null
@@ -14,7 +14,7 @@ _stats:
   coreVersion: '13.351'
   systemId: penombre
   systemVersion: '#{VERSION}#'
-  createdTime: 1765936267577
-  modifiedTime: 1765936267587
+  createdTime: 1766222007595
+  modifiedTime: 1766222007606
   lastModifiedBy: xu8p7UMcYrInjBEg
 _key: '!folders!IxCLMJlUPYUhtQ3N'
