--- a/src/packs/kit-pouvoirs-potentiels/pouvoir_Chevelure_vivante__action_gratuite_par_les_serpents__hq4Ul0nfIGKA5S64.yml
+++ b/src/packs/kit-pouvoirs-potentiels/pouvoir_Chevelure_vivante__action_gratuite_par_les_serpents__hq4Ul0nfIGKA5S64.yml
@@ -4,7 +4,7 @@ _id: hq4Ul0nfIGKA5S64
 img: systems/penombre/assets/icons/pouvoir.webp
 system:
   utilise: false
-  type: peuple
+  type: naissance
   description: >-
     <h1>Chevelure vivante</h1><p><em>Abandonne tes épaules tendues aux langues
     bifides de mes amis…</em></p><p>Faites réaliser une action physique aux
@@ -22,15 +22,16 @@ sort: 100000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
+  xu8p7UMcYrInjBEg: 3
 flags: {}
 _stats:
   compendiumSource: Actor.ZLqMDgg4edX0CAWX.Item.m7oh2WXepebJSUjC
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.351'
   systemId: penombre
-  systemVersion: '0'
-  createdTime: 1757151276783
-  modifiedTime: 1757151276783
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  systemVersion: '#{VERSION}#'
+  createdTime: 1766222002823
+  modifiedTime: 1766222002823
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _key: '!items!hq4Ul0nfIGKA5S64'
