--- a/src/packs/kit-pouvoirs-potentiels/pouvoir_Triomphe_RJFWJAbPmjoDJcaO.yml
+++ b/src/packs/kit-pouvoirs-potentiels/pouvoir_Triomphe_RJFWJAbPmjoDJcaO.yml
@@ -16,15 +16,16 @@ sort: 150000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
+  xu8p7UMcYrInjBEg: 3
 flags: {}
 _stats:
   compendiumSource: Actor.BrdkcvlYsY1CiYkT.Item.Encax1B4dW7Z6beg
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.351'
   systemId: penombre
-  systemVersion: '0'
-  createdTime: 1757151273463
-  modifiedTime: 1757151273463
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  systemVersion: '#{VERSION}#'
+  createdTime: 1766221980851
+  modifiedTime: 1766221980851
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _key: '!items!RJFWJAbPmjoDJcaO'
