--- a/src/packs/kit-pretires/eminence_Noh_mqK6cd47lWLvwL9C.yml
+++ b/src/packs/kit-pretires/eminence_Noh_mqK6cd47lWLvwL9C.yml
@@ -424,10 +424,10 @@ _stats:
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1765939795292
+  modifiedTime: 1767010538244
   lastModifiedBy: xu8p7UMcYrInjBEg
 _id: mqK6cd47lWLvwL9C
-sort: 900000
+sort: 1100000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
