--- a/src/packs/kit-pouvoirs-potentiels/pouvoir_Spectacle_vivant_p2pIEUcwKEmFJPEC.yml
+++ b/src/packs/kit-pouvoirs-potentiels/pouvoir_Spectacle_vivant_p2pIEUcwKEmFJPEC.yml
@@ -8,27 +8,27 @@ system:
     <h1>Spectacle vivant</h1><p><em>Être satyre c'est offrir à l'Harmonde un
     spectacle quotidien.</em></p><p>Le temps d'une action spectaculaire,
     utilisez gratuitement le D20 merveilleux en plus du dé harmonique.</p><p>De
-    plus, chaque fois qu’il réalise une merveille (p. 31 du kit), son joueur
-    peut lui choisir un nouveau pouvoir dans la liste suivante, ou augmenter de
-    1 sa valeur de conscience.</p><ul><li><p>Bouc
+    plus, chaque fois qu’il ou elle réalise une merveille (p. 31 du kit), son
+    joueur peut lui choisir un nouveau pouvoir dans la liste suivante, ou
+    augmenter de 1 sa valeur de conscience.</p><ul><li><p>Bouc
     émissaire</p></li><li><p>Chevreau des abysses</p></li></ul>
 effects: []
 folder: IxCLMJlUPYUhtQ3N
-sort: 300000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
   xu8p7UMcYrInjBEg: 3
 flags: {}
 _stats:
-  compendiumSource: Actor.mjfSDkvnDay0dXfO.Item.iiPkEFrzVLyHDK3e
-  duplicateSource: Item.nX4gy5Dx1dHloNYL
+  compendiumSource: null
+  duplicateSource: null
   exportSource: null
   coreVersion: '13.351'
   systemId: penombre
   systemVersion: '#{VERSION}#'
-  createdTime: 1766222007600
-  modifiedTime: 1766222007600
+  createdTime: 1767012957286
+  modifiedTime: 1767012962716
   lastModifiedBy: xu8p7UMcYrInjBEg
-_id: W6JqZUg9BRq4NW48
-_key: '!items!W6JqZUg9BRq4NW48'
+_id: p2pIEUcwKEmFJPEC
+sort: 300000
+_key: '!items!p2pIEUcwKEmFJPEC'
