--- a/src/packs/kit-pretires/eminence_T_tras__Satyre_Faune__GydFc7LKi7gaD7ch.yml
+++ b/src/packs/kit-pretires/eminence_T_tras__Satyre_Faune__GydFc7LKi7gaD7ch.yml
@@ -1,5 +1,5 @@
 folder: null
-name: Tétras (Satyre)
+name: Tétras (Satyre/Faune)
 type: eminence
 img: systems/penombre/assets/portraits/tetras.webp
 system:
@@ -74,7 +74,7 @@ system:
   maitrises: []
   description: engeance de Pan et de Lilith
 prototypeToken:
-  name: Tétras (homme)
+  name: Tétras (homme/femme)
   displayName: 0
   actorLink: true
   width: 1
@@ -281,42 +281,43 @@ items:
         effet magique, Tétras
         doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>utiliser sa
         voix</strong> pour crier, déclamer, réciter, murmurer, ou marmonner un
-        texte poétique.</p></li></ul><p><strong>Ce faisant,
-        il…</strong></p><h6>Action magique</h6><ul><li><p><strong>altère le
-        cours du temps.</strong> Il peut, comme avec les flots bouillonnants
-        d’une rivière, lire les marques du passé sur ses berges, deviner les
-        remous à venir, accélérer ou ralentir son écoulement, faire ricocher un
-        objet à sa surface, etc.</p></li></ul><p><strong>Avec un effet magique
-        de niveau ? …</strong></p><p><strong>il parvient par exemple
-        à…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
-        d’art ancien (accord, décorum, geste) ; restaurer ou vieillir un objet ;
-        provoquer une érosion accélérée ; exacerber la peur de la mort en la
-        montrant ; etc.</p></li><li><p><strong>voir le passé ou l’avenir proche
-        ;</strong> ralentir ou accélérer un mouvement ; faire fluctuer le temps
-        autour d’un personnage ; comprendre et parler un dialecte inconnu ;
-        soulager la fatigue en faisant oublier au corps le temps qui passe ;
-        etc.</p></li><li><p><strong>faire apparaître</strong> une vision du
-        passé proche, ou de l’avenir proche ; voir le passé lointain d’un lieu
-        ou d’un objet ; obtenir une information historique précise ; parler avec
-        un mort ; formuler une prophétie ; etc.</p></li><li><p><strong>figer
-        dans le temps ;</strong> rajeunir ou faire vieillir le corps d’un
-        personnage ; entrevoir une destinée ; nécroser et scléroser la chair ;
-        éviter la mort ; invoquer le souvenir d’un personnage du passé et
-        contrôler ses actions ; etc.</p></li><li><p><strong>dissimuler</strong>
-        dans le temps et ressurgir au même endroit, plus tard ; se déplacer
-        instantanément vers un espace lointain par un repli du temps ;
-        réincarner le passé comme si c’était le présent ; avancer ou revenir de
-        quelques instants dans le temps ; modifier le temps pour accélérer une
-        guérison ; etc.</p></li></ol><p><strong>Mais attention, il risque
-        également de…</strong></p><h6>Incident
-        magique</h6><ul><li><p><strong>sombrer dans la mélancolie.</strong> À la
-        moindre hésitation, Tétras se retrouve emporté par les flots du temps,
-        ballotté par les voix muettes de l’Harmonde et écorché par les écueils
-        de son destin incertain. il fait des rêves persistants ; il est hanté
-        par une présence ou des souvenirs étrangers ; il est pris de doute,
+        texte poétique.</p></li></ul><p><strong>Ce faisant, il ou
+        elle…</strong></p><h6>Action magique</h6><ul><li><p><strong>altère le
+        cours du temps.</strong> Il ou elle peut, comme avec les flots
+        bouillonnants d’une rivière, lire les marques du passé sur ses berges,
+        deviner les remous à venir, accélérer ou ralentir son écoulement, faire
+        ricocher un objet à sa surface, etc.</p></li></ul><p><strong>Avec un
+        effet magique de niveau ? …</strong></p><p><strong>il ou elle parvient
+        par exemple à…</strong></p><ol><li><p><strong>identifier</strong> un
+        effet magique d’art ancien (accord, décorum, geste) ; restaurer ou
+        vieillir un objet ; provoquer une érosion accélérée ; exacerber la peur
+        de la mort en la montrant ; etc.</p></li><li><p><strong>voir le passé ou
+        l’avenir proche ;</strong> ralentir ou accélérer un mouvement ; faire
+        fluctuer le temps autour d’un personnage ; comprendre et parler un
+        dialecte inconnu ; soulager la fatigue en faisant oublier au corps le
+        temps qui passe ; etc.</p></li><li><p><strong>faire apparaître</strong>
+        une vision du passé proche, ou de l’avenir proche ; voir le passé
+        lointain d’un lieu ou d’un objet ; obtenir une information historique
+        précise ; parler avec un mort ; formuler une prophétie ;
+        etc.</p></li><li><p><strong>figer dans le temps ;</strong> rajeunir ou
+        faire vieillir le corps d’un personnage ; entrevoir une destinée ;
+        nécroser et scléroser la chair ; éviter la mort ; invoquer le souvenir
+        d’un personnage du passé et contrôler ses actions ;
+        etc.</p></li><li><p><strong>dissimuler</strong> dans le temps et
+        ressurgir au même endroit, plus tard ; se déplacer instantanément vers
+        un espace lointain par un repli du temps ; réincarner le passé comme si
+        c’était le présent ; avancer ou revenir de quelques instants dans le
+        temps ; modifier le temps pour accélérer une guérison ;
+        etc.</p></li></ol><p><strong>Mais attention, il ou elle risque également
+        de…</strong></p><h6>Incident magique</h6><ul><li><p><strong>sombrer dans
+        la mélancolie.</strong> À la moindre hésitation, Tétras se retrouve
+        emporté(e) par les flots du temps, ballotté(e) par les voix muettes de
+        l’Harmonde et écorché(e) par les écueils de son destin incertain. il ou
+        elle fait des rêves persistants ; il ou elle est hanté(e) par une
+        présence ou des souvenirs étrangers ; il ou elle est pris(e) de doute,
         voire plonge dans une profonde dépression ; etc.</p></li></ul>
       harmonique: ame
-      niveau: 2
+      niveau: 1
       prerequis: se lancer dans une tirade
     effects: []
     folder: null
@@ -332,7 +333,8 @@ items:
       coreVersion: '13.351'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
+      lastModifiedBy: xu8p7UMcYrInjBEg
+      modifiedTime: 1767012904348
     _key: '!actors.items!GydFc7LKi7gaD7ch.tkbqDZHRR6IAlkGy'
   - type: maitrise
     name: Conjuration
@@ -345,15 +347,16 @@ items:
         magique, Tétras
         doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>tracer les
         contours d’une ombre</strong> à l’encre de son
-        sang.</p></li></ul><p><strong>Cette action le fait entrer en résonance
-        avec…</strong></p><h6>Harmonique : nuit</h6><p><strong>Ce faisant,
-        il…</strong></p><h6>Action magique</h6><ul><li><p><strong>pactise avec
-        le démon né de cette ombre.</strong> Le démon exécute la mission qui lui
-        est confiée, et le conjurateur le rémunère. La connivence qui les unit
-        doit être enregistrée auprès d’un advocatus diaboli et coûte d’autant
-        plus cher que l’effet souhaité est élevé.</p></li></ul><p><strong>Avec
-        un effet magique de niveau ? …</strong></p><p><strong>il conjure un
-        démon capable par exemple
+        sang.</p></li></ul><p><strong>Cette action le ou la fait entrer en
+        résonance avec…</strong></p><h6>Harmonique : nuit</h6><p><strong>Ce
+        faisant, il ou elle…</strong></p><h6>Action
+        magique</h6><ul><li><p><strong>pactise avec le démon né de cette
+        ombre.</strong> Le démon exécute la mission qui lui est confiée, et le
+        conjurateur le rémunère. La connivence qui les unit doit être
+        enregistrée auprès d’un advocatus diaboli et coûte d’autant plus cher
+        que l’effet souhaité est élevé.</p></li></ul><p><strong>Avec un effet
+        magique de niveau ? …</strong></p><p><strong>il ou elle conjure un démon
+        capable par exemple
         de…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
         d’art noir (conjuration, omnium, prisme) ; chercher un objet ;
         transporter une charge ou un message, y compris en volant ; faire une
@@ -372,7 +375,7 @@ items:
         identité ; se battre comme un duelliste renommé ;
         etc.</p></li><li><p><strong>exceller</strong> dans tous les domaines ;
         conjurer de nouveaux démons ; etc.</p></li></ol><p><strong>Mais
-        attention, il risque également de…</strong></p><h6>Incident
+        attention, il ou elle risque également de…</strong></p><h6>Incident
         magique</h6><ul><li><p><strong>laisser la porte ouverte.</strong>
         L’ombre laisse s’échapper bien plus que le démon appelé. Cela peut
         valoir au conjurateur une sanction de la part du Clergé obscur. Qui a
@@ -398,7 +401,8 @@ items:
       coreVersion: '13.351'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
+      lastModifiedBy: xu8p7UMcYrInjBEg
+      modifiedTime: 1767013038736
     _key: '!actors.items!GydFc7LKi7gaD7ch.5N4i9Yfb27Cl6Qry'
   - name: Spectacle vivant
     type: pouvoir
@@ -410,10 +414,11 @@ items:
         <h1>Spectacle vivant</h1><p><em>Être satyre c'est offrir à l'Harmonde un
         spectacle quotidien.</em></p><p>Le temps d'une action spectaculaire,
         utilisez gratuitement le D20 merveilleux en plus du dé
-        harmonique.</p><p>De plus, chaque fois qu’il réalise une merveille (p.
-        31 du kit), son joueur peut lui choisir un nouveau pouvoir dans la liste
-        suivante, ou augmenter de 1 sa valeur de conscience.</p><ul><li><p>Bouc
-        émissaire</p></li><li><p>Chevreau des abysses</p></li></ul>
+        harmonique.</p><p>De plus, chaque fois qu’il ou elle réalise une
+        merveille (p. 31 du kit), son joueur peut lui choisir un nouveau pouvoir
+        dans la liste suivante, ou augmenter de 1 sa valeur de
+        conscience.</p><ul><li><p>Bouc émissaire</p></li><li><p>Chevreau des
+        abysses</p></li></ul>
     effects: []
     folder: IxCLMJlUPYUhtQ3N
     sort: 300000
@@ -429,7 +434,8 @@ items:
       coreVersion: '13.351'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
+      lastModifiedBy: xu8p7UMcYrInjBEg
+      modifiedTime: 1767012729744
     _id: W6JqZUg9BRq4NW48
     _key: '!actors.items!GydFc7LKi7gaD7ch.W6JqZUg9BRq4NW48'
   - type: pouvoir
@@ -503,7 +509,7 @@ _stats:
   systemId: penombre
   systemVersion: '#{VERSION}#'
   createdTime: 1767010538186
-  modifiedTime: 1767010538244
+  modifiedTime: 1767012696357
   lastModifiedBy: xu8p7UMcYrInjBEg
 _id: GydFc7LKi7gaD7ch
 sort: 200000
