--- a/src/packs/kit-pouvoirs-potentiels/maitrise_Obscurantisme_GknbkJinBjESqJbX.yml
+++ b/src/packs/kit-pouvoirs-potentiels/maitrise_Obscurantisme_GknbkJinBjESqJbX.yml
@@ -1,6 +1,6 @@
 type: maitrise
 name: Obscurantisme
-img: systems/penombre/assets/icons/maitrise.webp
+img: systems/penombre/assets/magies/magie_obscuranstisme.webp
 system:
   description: >-
     <p><strong>Pour préparer son effet magique, un obscurantiste
@@ -56,8 +56,8 @@ _stats:
   systemId: penombre
   systemVersion: '#{VERSION}#'
   createdTime: 1765953693815
-  modifiedTime: 1765953693830
-  lastModifiedBy: xu8p7UMcYrInjBEg
+  modifiedTime: 1768140284960
+  lastModifiedBy: 48UBcifP4R5B9bjf
 ownership:
   default: 0
   xu8p7UMcYrInjBEg: 3
