--- a/src/packs/kit-pouvoirs-potentiels/maitrise_Accord_MMi43fiOMdOENGNw.yml
+++ b/src/packs/kit-pouvoirs-potentiels/maitrise_Accord_MMi43fiOMdOENGNw.yml
@@ -1,7 +1,7 @@
 type: maitrise
 name: Accord
 _id: MMi43fiOMdOENGNw
-img: systems/penombre/assets/icons/maitrise.webp
+img: systems/penombre/assets/magies/magie_accord.webp
 system:
   description: >-
     <p><strong>Pour préparer son effet magique, un accordé
@@ -59,8 +59,8 @@ _stats:
   systemId: penombre
   systemVersion: '#{VERSION}#'
   createdTime: 1765943368698
-  modifiedTime: 1765943368698
-  lastModifiedBy: xu8p7UMcYrInjBEg
+  modifiedTime: 1768140156728
+  lastModifiedBy: 48UBcifP4R5B9bjf
 ownership:
   default: 0
   xu8p7UMcYrInjBEg: 3
