--- a/src/packs/kit-pouvoirs-potentiels/maitrise_Brigue_i6S83eYjR1Gt7VF2.yml
+++ b/src/packs/kit-pouvoirs-potentiels/maitrise_Brigue_i6S83eYjR1Gt7VF2.yml
@@ -1,7 +1,7 @@
 type: maitrise
 name: Brigue
 _id: i6S83eYjR1Gt7VF2
-img: systems/penombre/assets/icons/maitrise.webp
+img: systems/penombre/assets/magies/magie_brigue.webp
 system:
   description: >-
     <p><strong>Pour préparer son effet magique, un brigand
@@ -61,8 +61,8 @@ _stats:
   systemId: penombre
   systemVersion: '#{VERSION}#'
   createdTime: 1765943368698
-  modifiedTime: 1765943368698
-  lastModifiedBy: xu8p7UMcYrInjBEg
+  modifiedTime: 1768140174997
+  lastModifiedBy: 48UBcifP4R5B9bjf
 ownership:
   default: 0
   xu8p7UMcYrInjBEg: 3
