--- a/src/packs/kit-pouvoirs-potentiels/maitrise__clipsisme_utQSRHkKCOJCdxCb.yml
+++ b/src/packs/kit-pouvoirs-potentiels/maitrise__clipsisme_utQSRHkKCOJCdxCb.yml
@@ -1,6 +1,6 @@
 type: maitrise
 name: Éclipsisme
-img: systems/penombre/assets/icons/maitrise.webp
+img: systems/penombre/assets/magies/magie_eclipsisme.webp
 system:
   description: >-
     <p><strong>Pour préparer son effet magique, un éclipsiste
@@ -61,8 +61,8 @@ _stats:
   systemId: penombre
   systemVersion: '#{VERSION}#'
   createdTime: 1765943368698
-  modifiedTime: 1765943368698
-  lastModifiedBy: xu8p7UMcYrInjBEg
+  modifiedTime: 1768140210684
+  lastModifiedBy: 48UBcifP4R5B9bjf
 ownership:
   default: 0
   xu8p7UMcYrInjBEg: 3
